--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 .DS_Store
 node_modules/
 /dist/
+node_modules
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+
 # Editor directories and files
 .idea
 .vscode
@@ -12,3 +20,4 @@ package-lock.json
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
